corrected overlapping button

--- a/webpack/static/account_style.css
+++ b/webpack/static/account_style.css
@@ -159,3 +159,12 @@
         top: 50px;
     }
 }
+@media (max-width: 48em){
+    .ask_button{
+        margin-top: -80px;
+        margin-right: 130px;
+    }
+    ._container{
+        margin-top: 40px;
+    }
+}
